3.6/drivers/java-reference-database-database-manipulation.md
---
layout: default
description: These functions implement the HTTP API for manipulating databases
---
# Manipulation databases

These functions implement the
[HTTP API for manipulating databases](../http/database.html).

## ArangoDB.createDatabase

`ArangoDB.createDatabase(String name) : Boolean`

Creates a new database with the given name.

**Arguments**

- **name**: `String`

  Name of the database to create

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
arango.createDatabase("myDB");
```

`ArangoDB.createDatabase(DBCreateOptions options) : Boolean`

Creates a new database with the given options.

**Arguments**

- **options**: `DBCreateOptions`

  Options for the database to create

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
arango.createDatabase(new DBCreateOptions()
    .name("oneShardDB")
    .options(new DatabaseOptions()
        .writeConcern(2)
        .replicationFactor(3)
        .sharding("single")
    )
);
```

## ArangoDatabase.create()

`ArangoDatabase.create() : Boolean`

Creates the database.

Alternative for [ArangoDB.createDatabase](#arangodbcreatedatabase).

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
ArangoDatabase db = arango.db("myDB");
db.create();
```

## ArangoDatabase.exists()

`ArangoDatabase.exists() : boolean`

Checks whether the database exists

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
ArangoDatabase db = arango.db("myDB");
boolean exists = db.exists();
```

## ArangoDatabase.getInfo

`ArangoDatabase.getInfo() : DatabaseEntity`

Retrieves information about the current database

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
ArangoDatabase db = arango.db("myDB");
DatabaseEntity info = db.getInfo();
```

## ArangoDB.getDatabases

`ArangoDB.getDatabases() : Collection<String>`

Retrieves a list of all existing databases

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
Collection<String> names = arango.getDatabases();
```

## ArangoDatabase.drop

`ArangoDatabase.drop() : Boolean`

Deletes the database from the server.

**Examples**

```Java
ArangoDB arango = new ArangoDB.Builder().build();
ArangoDatabase db = arango.db("myDB");
db.drop();
```
